apps/keadex-battisti/src/styles/nextra.css
a {
  @apply text-brand1 underline underline-offset-8 !important;
}

input {
  @apply placeholder:text-accent-secondary text-accent-primary p-2 py-1.5 !important;
  @apply focus:border-brand1 active:border-brand1 focus-visible:ring-0 focus-visible:ring-opacity-0 ring-offset-0 !important;
  @apply bg-secondary border-third block w-full rounded-md border border-solid outline-none ring-0 drop-shadow-[0_1px_2px_rgba(0,0,0,0.6)] !important;
}

.nextra-container h1,
.nextra-container h2 {
  @apply text-accent-primary font-normal border-b-accent-third !important;
}

.nextra-container main div:last-child {
  @apply border-t-accent-third;
}

.nextra-container main div:last-child a {
  @apply no-underline !important;
}

.nextra-content {
  @apply text-accent-secondary !important;
}

.nextra-breadcrumb div {
  @apply text-accent-third;
}

.nextra-breadcrumb :last-child {
  @apply text-accent-secondary;
}

.nextra-breadcrumb div:first-child {
  @apply hidden;
}

.nextra-breadcrumb svg:nth-child(2) {
  @apply hidden;
}

.nextra-breadcrumb div:nth-child(3) {
  @apply hidden;
}

.nextra-breadcrumb svg:nth-child(4) {
  @apply hidden;
}

.nextra-sidebar-container a {
  @apply text-accent-secondary no-underline !important;
}

.nextra-sidebar-container a:hover {
  @apply bg-secondary text-accent-primary !important;
}

.nextra-sidebar-container li.active a {
  @apply bg-secondary text-accent-primary !important;
}

.nextra-sidebar-container button {
  @apply text-accent-secondary !important;
}

.nextra-sidebar-container button:hover {
  @apply bg-secondary text-accent-primary !important;
}

.nextra-sidebar-container li.open.active button {
  @apply bg-secondary text-accent-primary !important;
}

.nextra-nav-container > div {
  @apply bg-dark-primary/60 shadow-md backdrop-blur-md !important;
}

.nextra-nav-container nav {
  @apply py-4 h-auto !important;
}

.nextra-nav-container nav img {
  @apply h-[1.45rem] !important;
}

.nextra-nav-container nav > div:first-child {
  @apply mr-auto !important;
}

.nextra-nav-container nav > div:first-child > div > a:first-child {
  @apply mr-[5rem] !important;
}

.nextra-nav-container nav > div:first-child > div > a:nth-child(2),
.nextra-nav-container nav > div:first-child > div > a:nth-child(3) {
  @apply mr-8 truncate text-accent-secondary no-underline hidden md:block !important;
}

.nextra-nav-container nav > div:first-child > div > a:nth-child(2):hover,
.nextra-nav-container nav > div:first-child > div > a:nth-child(3):hover {
  @apply text-accent-primary !important;
}

.nextra-nav-container nav > a {
  @apply text-accent-secondary text-base ml-1 mr-auto !important;
}

.nextra-nav-container nav > a:hover {
  @apply text-accent-primary opacity-100 !important;
}

.nextra-sidebar-container {
  @apply max-sm:bg-dark-primary/60 max-sm:backdrop-blur-md !important;
}

.nextra-search .nextra-scrollbar {
  @apply bg-secondary border-third !important;
}

.nextra-search .nextra-scrollbar span {
  @apply text-accent-secondary !important;
}

.nextra-search .nextra-scrollbar a {
  @apply no-underline !important;
}

.nextra-search .nextra-scrollbar li.nx-bg-primary-500\/10 {
  @apply bg-link !important;
}

.nextra-search .nextra-scrollbar a > div {
  @apply text-accent-primary !important;
}

.nextra-search .nextra-scrollbar a > div:nth-child(2) {
  @apply text-accent-secondary !important;
}

.nextra-search .nextra-scrollbar a .nx-text-primary-600 {
  @apply text-accent-primary !important;
}

.nextra-search .nextra-scrollbar .nx-border-b {
  @apply border-third text-accent-primary !important;
}

.nextra-toc > .nextra-scrollbar > p {
  @apply font-medium !important;
}

.nextra-toc > .nextra-scrollbar ul li a {
  @apply no-underline text-accent-secondary !important;
}

.nextra-toc > .nextra-scrollbar ul li a:hover {
  @apply text-accent-primary !important;
}

.nextra-toc > .nextra-scrollbar div:last-child {
  @apply hidden !important;
}

